fix(deeisgn): bit better on mobile

--- a/src/main.scss
+++ b/src/main.scss
@@ -187,7 +187,6 @@ h1 {
   margin-top: 5rem;
   font-size: 1.6rem;
   color: var(--c-brand);
-  margin-bottom: 10rem;
 }
 
 .recommendation {
